--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 /* Google font css link */
-@import url('https://fonts.googleapis.com/css2?family=Scheherazade+New&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
 
 /* Google font css Style */
 * {
-    font-family: 'Scheherazade New', serif;
-    letter-spacing: 2px;
+    font-family: 'Merriweather', serif;
+    letter-spacing: 1px;
 }
