--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 /* Google font css link */
-@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
 
 /* Google font css Style */
 * {
-    font-family: 'Merriweather', serif;
+    font-family: 'Roboto Condensed', sans-serif;
     letter-spacing: 1px;
 }
